--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,14 @@ trigger:
 - master
 
 # Using current pool name
-pool: $(poolName)
+pool: myagentpool
 
 variables:
   # TODO: Replace the service connection name
   azureServiceConnectionId: 'flaskml'
   
   # TODO: Replace 'mywebapp193576' with the existing Web App name
-  webAppName: '$(webServiceAppName)'
+  webAppName: 'mywebapp10021990'
 
   # Environment name
   environmentName: 'flask-ml-service'
